# QtHackathon

./: .gitignore
BaseRobo/app/: build.gradle.kts
BaseRobo/app/src/main/: AndroidManifest.xml
BaseRobo/app/src/main/java/com/example/baserobo/: MainActivity.kt
BaseRobo/app/src/main/java/com/example/baserobo/ui/camera/: CameraFragment.kt  CameraViewModel.kt
BaseRobo/app/src/main/res/drawable/: ic_camera_black_24dp.xml
BaseRobo/app/src/main/res/layout/: fragment_camera.xml  fragment_home.xml
BaseRobo/app/src/main/res/menu/: bottom_nav_menu.xml
BaseRobo/app/src/main/res/navigation/: mobile_navigation.xml
BaseRobo/app/src/main/res/values/: colors.xml  strings.xml
RoboMain/QtQuickView-Android/BaseRobo/app/: build.gradle.kts
RoboMain/QtQuickView-Android/BaseRobo/app/src/main/java/com/example/baserobo/ui/home/: HomeFragment.kt
RoboMain/QtQuickView-Android/BaseRobo/app/src/main/res/layout/: fragment_home.xml
RoboMain/QtQuickView-Android/BaseRobo/app/src/main/res/values/: colors.xml  strings.xml
RoboMain/QtQuickView-Android/BaseRobo/gradle/: libs.versions.toml
RoboMain/QtQuickView-Android/Robot/: CMakeLists.txt  Robot.qmlproject.qtds  qds.cmake
RoboMain/QtQuickView-Android/Robot/App/: main.cpp
RoboMain/QtQuickView-Android/Robot/App/autogen/: environment.h
RoboMain/QtQuickView-Android/Robot/Robot/: CMakeLists.txt  qmldir
RoboMain/QtQuickView-Android/Robot/Robot/designer/: plugin.metainfo
RoboMain/QtQuickView-Android/Robot/RobotContent/: CMakeLists.txt  Screen01.ui.qml
Robot/: .gitignore  CMakeLists.txt  Robot.qmlproject
Robot/App/: AppInitializer.cpp  AppInitializer.hpp  CameraController.cpp  CameraController.hpp  main.cpp
Robot/App/autogen/: environment.h
Robot/RobotContent/: App.qml
